--- a/node.js/package.json
+++ b/node.js/package.json
@@ -28,6 +28,7 @@
   },
   "repository": "christroutner/ipfs-pubsub-prototype",
   "dependencies": {
+    "@psf/bch-js": "^4.15.0",
     "ipfs": "^0.50.1",
     "orbit-db": "^0.26.0",
     "orbit-db-access-controllers": "^0.3.0"
